cluster/apps/networking/external-gateway/resources/argocd-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http
  namespace: argocd
spec:
  hostnames:
    - argocd.btkostner.network
  parentRefs:
    - name: external-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
